Text box border, button size and letter spacing fixed

--- a/src/Pages/Support/SupportPage.css
+++ b/src/Pages/Support/SupportPage.css
@@ -294,10 +294,10 @@
 }
 
 .support-page-contact-form textarea {
+  border: 1px solid grey;
   padding: 10px 15px;
   min-height: 200px;
   background-color: rgba(128, 128, 128, 0.281);
-  letter-spacing: 1px;
   font-size: 14px;
   width: 100%;
 }
